# vita-auto-launcher

./: .gitignore  CMakeLists.txt  Dockerfile.build  README.md
.github/workflows/: release.yaml
configurator/: CMakeLists.txt
configurator/livearea/contents/: template.xml
configurator/source/: main.c
plugin/: CMakeLists.txt  main.c  vita-auto-launcher.yml
